--- a/SocketIO/views/index.ejs
+++ b/SocketIO/views/index.ejs
@@ -1,33 +1,36 @@
+<script src="/javascripts/jquery.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script type="text/javascript">
-var socket = io.connect('http://192.168.110.195:3000');
+
+var socket = io.connect('http://localhost:3000');
+
 socket.on('connect', function(msg) {
-  console.log("connet");
-  document.getElementById("connectId").innerHTML = 
-    "あなたの接続ID::" + socket.socket.transport.sessid;
-  document.getElementById("type").innerHTML = 
-    "接続方式::" + socket.socket.transport.name;
+    console.log("connet");
+    $('#connectId').html('あなたの接続ID::' + socket.socket.transport.sessid);
+    $('#type').html('接続方式::' + socket.socket.transport.name);
 });
 
 // メッセージを受けたとき
 socket.on('message', function(msg) {
-  // メッセージを画面に表示する
-  document.getElementById("receiveMsg").innerHTML = msg.value;
+    // メッセージを画面に表示する
+    $('#receiveMsg').prepend(msg.value + '<br>');
 });
 
 // メッセージを送る
 function SendMsg() {
-  var msg = document.getElementById("message").value;
-  // メッセージを発射する
-  socket.emit('message', { value: msg });
+    var msg = $('#message').val();
+    // メッセージを発射する
+    socket.emit('message', { value: msg });
+    $('#message').val('');
 }
+
 // 切断する
 function DisConnect() {
-  var msg = socket.socket.transport.sessid + "は切断しました。";
-  // メッセージを発射する
-  socket.emit('message', { value: msg });
-  // socketを切断する
-  socket.disconnect();
+    var msg = socket.socket.transport.sessid + "は切断しました。";
+    // メッセージを発射する
+    socket.emit('message', { value: msg });
+    // socketを切断する
+    socket.disconnect();
 }
 </script>
 
