--- a/SocketIO/views/index.ejs
+++ b/SocketIO/views/index.ejs
@@ -4,6 +4,7 @@
 
 var socket = io.connect();
 
+// WebSocketでの接続
 socket.on('connect', function(msg) {
     console.log("connet");
     $('#connectId').html('あなたの接続ID::' + socket.socket.transport.sessid);
