--- a/SocketIO/views/chatlayout.ejs
+++ b/SocketIO/views/chatlayout.ejs
@@ -6,6 +6,7 @@
 
         <script type="text/javascript" src="/javascripts/jquery-1.7.1.js"></script>
         <script src="/socket.io/socket.io.js"></script>
+        <script type="text/javascript" src="/javascripts/chat.js"></script>
   </head>
   <body>
     <%- body %>
