--- a/NodeServer/views/webcommand.ejs
+++ b/NodeServer/views/webcommand.ejs
@@ -4,7 +4,7 @@
     <title><%= title %></title>
         <meta charset="UTF-8">
 
-        <script type="text/javascript" src="/javascripts/jquery-1.7.1.js"></script>
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script type="text/javascript" src="/javascripts/jquery-ui-1.8.19.custom.min.js"></script>
         <script type="text/javascript" src="/javascripts/jquery.vtoggle.js"></script>
