--- a/SampleSocketIO/views/index.ejs
+++ b/SampleSocketIO/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title><%= title %></title>
-    <script src="/javascripts/jquery.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/javascripts/chat.js"></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
