--- a/SampleSocketIO/views/index.ejs
+++ b/SampleSocketIO/views/index.ejs
@@ -13,8 +13,8 @@
     <div id="type"></div>
     <br>
     <input type="text" id="message" value="">
-    <input type="button" value="メッセージを送る" onclick="SendMsg()">
-    <input type="button" value="切断する" onclick="DisConnect()">
+    <input type="button" id="send" value="メッセージを送る">
+    <input type="button" id="disconnect" value="切断する">
     <div id="receiveMsg"></div>
   </body>
 </html>
